--- a/cosmos_django/templates/cosmos_django/landing_page.html
+++ b/cosmos_django/templates/cosmos_django/landing_page.html
@@ -1,5 +1,6 @@
 <h1>Cosmos EHR - Like Superhuman email, but for EHRS</h1>
 
 <p>Built by the bouls, Darshan and Sudeep</p>
+<span>#Moneytalk</span>
 
 <img src="https://media.giphy.com/media/d3mlE7uhX8KFgEmY/giphy.gif"/>
