Implement skeleton of login/signup

--- a/cosmos_django/templates/cosmos_django/landing_page.html
+++ b/cosmos_django/templates/cosmos_django/landing_page.html
@@ -3,4 +3,8 @@
 <p>Built by the bouls, Darshan and Sudeep</p>
 <p>#Moneytalk</p>
 
+<a href="{% url 'account/signin' %}">Sign in</a>
+<a href="{% url 'account/signup' %}">Sign up</a>
+
+<br />
 <img src="https://media.giphy.com/media/d3mlE7uhX8KFgEmY/giphy.gif"/>
