--- a/cosmos_django/clinical/templates/clinical/home.html
+++ b/cosmos_django/clinical/templates/clinical/home.html
@@ -1,6 +1,6 @@
 <h1>Home</h1>
 
-Current user: {{ account.email }}
+Current user: {{ user.email }}
 
 <br />
 <a href="{% url 'account/logout' %}">Logout</a>
