--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -1,10 +1,10 @@
-/* Patient Page */
+/* PatientPage */
 .patient-page {
     display: flex;
     flex-direction: column;
 }
 
-/* Patient Head */
+/* PatientHead */
 .patient-head {
     display: flex;
     flex-direction: column;
@@ -15,4 +15,24 @@
     height: 200px;
     width: 200px;
     border-radius: 50%;
+}
+
+/* PatientTabContent */
+.tab-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.tab-pane {
+    width: 80%;
+    margin-top: 20px;
+}
+
+/* Visit */
+.visit {
+    margin-bottom: 10px;
+    padding: 0 10px 10px 10px;
+
+    border: 1px solid black;
 }
