--- a/cosmos_django/account/templates/account/signup.html
+++ b/cosmos_django/account/templates/account/signup.html
@@ -9,12 +9,24 @@
         <input id="email" type="email" placeholder="" name="email">
     </div>
     <div>
+        <label for="first-name">First Name</label>
+        <input id="first-name" type="text" placeholder="" name="first-name">
+    </div>
+    <div>
+        <label for="last-name">Last Name</label>
+        <input id="last-name" type="text" placeholder="" name="last-name">
+    </div>
+    <div>
         <label for="password">Password</label>
         <input type="password" id="password" placeholder="" name="password">
     </div>
     <div>
         <label for="password-check">Confirm Password</label>
         <input type="password" id="password-check" placeholder="" name="password-check">
+    </div>
+    <div>
+        <label for="is-provider">Are you a healthcare provider?</label>
+        <input type="checkbox" id="is-provider" name="is-provider">
     </div>
 
     <input type="submit" value="Sign in">
