--- a/cosmos_django/frontend/templates/frontend/index.html
+++ b/cosmos_django/frontend/templates/frontend/index.html
@@ -6,11 +6,17 @@
     <title>Cosmos</title>
     <link rel="stylesheet" href="{% static 'frontend/App.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script>
+        {#console.log({{ user_id }})#}
+        window.user_id = {{ user_id }};
+    </script>
 </head>
 <body>
+
     <div id="app"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="{% static 'frontend/main.js' %}"></script>
+
 </body>
 </html>
