Add create user endpoint

--- a/cosmos_django/templates/cosmos_django/landing_page.html
+++ b/cosmos_django/templates/cosmos_django/landing_page.html
@@ -1,10 +1,5 @@
-<h1>Cosmos EHR - Like Superhuman email, but for EHRS</h1>
+<h1>Cosmos EHR Landing Page</h1>
 
-<p>Built by the bouls, Darshan and Sudeep</p>
-<p>#Moneytalk</p>
+<p>Entice superusers here.</p>
 
-<a href="{% url 'account/signin' %}">Sign in</a>
-<a href="{% url 'account/signup' %}">Sign up</a>
-
-<br />
-<img src="https://media.giphy.com/media/d3mlE7uhX8KFgEmY/giphy.gif"/>
+<a href="{% url 'frontend/home' %}">Go to react app here.</a>
