Implement skeleton for login/register/logout

--- a/cosmos_django/templates/cosmos_django/landing_page.html
+++ b/cosmos_django/templates/cosmos_django/landing_page.html
@@ -2,4 +2,4 @@
 
 <p>Entice superusers here.</p>
 
-<a href="{% url 'frontend/home' %}">Go to react app here.</a>
+<a href="{% url 'app/home' %}">Go to react app here.</a>
