--- a/cosmos_django/static/frontend/App.css
+++ b/cosmos_django/static/frontend/App.css
@@ -24,3 +24,15 @@
     border: 1px solid black;
     margin: 10px;
 }
+
+/* Medication */
+.medication {
+    border: 1px solid black;
+    margin: 10px;
+}
+
+/* Vaccination */
+.vaccination {
+    border: 1px solid black;
+    margin: 10px;
+}
