--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -3,8 +3,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Roboto, sans-serif;
 }
 
+/* Fonts */
+@font-face {
+    font-family: "Neue Hans Kendrick";
+    src: url("frontend/static/frontend/fonts/NeueHansKendrick-Regular.eot");
+    src: url("frontend/static/frontend/fonts/NeueHansKendrick-Regular.woff") format("woff"),
+    url("frontend/static/frontend/fonts/NeueHansKendrick-Regular.svg") format("svg");
+}
+
+/* Authentication */
 .login-signup-form-container {
     display: flex;
     justify-content: center;
@@ -18,6 +28,19 @@
 
 .login-signup-form-content h1 {
     text-align: center;
+    font-family: "Neue Hans Kendrick", sans-serif;
+}
+
+.login-signup-form-content-logo-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.login-signup-form-content-logo-container img {
+    width: 50%;
+    height: 50%;
 }
 
 .login-signup-form {
@@ -29,8 +52,28 @@
 }
 
 .login-signup-form-button-container {
+    margin-top: 30px;
     display: flex;
     justify-content: center;
+}
+
+.login-signup-textfield-container {
+    margin-top: 20px;
+}
+
+.login-signup-textfield {
+    width: 100%;
+}
+
+.login-signup-redirect-link-container {
+    display: flex;
+    justify-content: center;
+}
+
+.login-signup-redirect-link-container {
+    font-size: 14px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 /* Patient Home */
@@ -146,5 +189,9 @@
     border: 1px solid lightgrey;
     border-radius: 10px;
     padding: 10px;
+}
+
+.box-shadow-container {
+    box-shadow: 0 3px 15px rgba(0,0,0,0.2);
 }
 
