Fix fonts on header metadata

--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -105,6 +105,14 @@
     margin-left: 20px;
 }
 
+.patient-header-metadata h1 {
+    font-family: "Neue Hans Kendrick", sans-serif;
+}
+
+.patient-header-metadata p {
+    font-size: 14px;
+}
+
 /* Patient charts */
 .patient-charts {
     margin-top: 10px;
