--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -96,9 +96,8 @@
 }
 
 .profile-picture {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
+    min-width: 60px;
+    min-height: 60px;
 }
 
 .patient-header-metadata {
