Convert Charts.js to typescript

--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -113,12 +113,13 @@
 }
 
 /* Patient charts */
-.patient-charts {
+.charts {
     margin-top: 10px;
 }
 
-.patient-chart-content-container {
-    margin-top: 10px;
+.chart-content-container {
+    margin-top: 20px;
+    padding: 20px;
 }
 
 /* Visit */
