--- a/cosmos_django/cosmos_django/static/cosmos_django/landing_page.css
+++ b/cosmos_django/cosmos_django/static/cosmos_django/landing_page.css
@@ -6,21 +6,22 @@
 }
 
 .landing-page-content {
+    margin-top: 40px;
+    height: 80vh;
     display: flex;
-    align-items: center;
     flex-direction: column;
-}
-
-.landing-page-content h1 {
-    margin-bottom: 15%;
-    font-family: "Neue Hans Kendrick", sans-serif;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .text-logo {
-    width: 20%;
-    height: 20%;
-    margin-bottom: 15%;
-    margin-top: 2%;
+    width: 400px;
+    height: 110px;
+}
+
+
+.landing-page-content h1 {
+    font-family: "Neue Hans Kendrick", sans-serif;
 }
 
 .start-button {
