Move first and last name field to same row and other prevent snackbar from closing if click away

--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -35,7 +35,7 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .login-signup-form-content-logo-container img {
@@ -44,7 +44,6 @@
 }
 
 .login-signup-form {
-    margin-top: 30px;
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -185,12 +184,17 @@
     margin-top: 20px;
 }
 
-.form-input-field {
-    width: 100%;
+.form-bi-input-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-bi-input-field {
+    width: 49%;
 }
 
 .form-button-container {
-    margin-top: 30px;
+    margin-top: 20px;
     display: flex;
     justify-content: center;
 }
