--- a/cosmos_django/templates/cosmos_django/landing_page.html
+++ b/cosmos_django/templates/cosmos_django/landing_page.html
@@ -21,7 +21,7 @@
         <img class="text-logo" src="{% static 'frontend/images/logos/text_800_220.png' %}"/>
     </div>
     <div style="text-align: center">
-        <h1>The fastest Electronic Health Record experience in existence.</h1>
+        <h1>Enjoy your Electronic Health Record experience.</h1>
     </div>
     <div>
         <a class="btn btn-outline-success btn-lg start-button" href="{% url 'app/home' %}" role="button">Start</a>
