--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -44,6 +44,7 @@
 }
 
 .login-signup-form {
+    margin-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -99,8 +100,7 @@
 }
 
 .chart-content-container {
-    margin-top: 20px;
-    padding: 20px;
+    margin-top: 10px;
 }
 
 /* Encounter */
@@ -183,8 +183,8 @@
 }
 
 .panel {
-    margin: 20px 0;
-    height: 200px;
+    margin: 15px 0;
+    /*padding: 20px 20px 10px 20px;*/
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
@@ -202,16 +202,51 @@
     background-color: white;
     opacity: 0;
     border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     transition: opacity 0.3s ease-in-out;
 }
 
 .panel:hover {
-  transform: scale(1.025, 1.025);
+    transform: scale(1.025, 1.025);
 }
 
 .panel:hover::after {
-  opacity: 1;
+    opacity: 1;
+}
+
+.panel-title {
+    font-family: "Neue Hans Kendrick", sans-serif;
+    font-size: 20px;
+}
+
+.panel-content {
+    margin-top: 20px;
+}
+
+.panel-title-and-content {
+    padding: 20px 20px 10px 20px;
+}
+
+.text-field-panel {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: inherit;
+    height: inherit;
+}
+
+.text-field-panel-footer {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 10px;
+}
+
+.text-field-panel-edit-button {
+    visibility: visible;
+}
+
+.text-field-panel-edit-button-hidden {
+    visibility: hidden;
 }
 
 /* Utilities */
@@ -228,7 +263,7 @@
 
 /* Forms */
 .form-input-container {
-    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .form-bi-input-container {
