--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -103,6 +103,12 @@
     margin-top: 10px;
 }
 
+/* Profile Tab */
+.profile-button-row {
+    display: flex;
+    justify-content: flex-end;
+}
+
 /* Encounter */
 .encounter {
     margin-bottom: 10px;
@@ -173,22 +179,25 @@
 }
 
 .panel-grid-main-column {
-    margin: 0 10px;
+    margin: 0 10px 0 0;
     width: 60%;
 }
 
 .panel-grid-secondary-column {
     width: 40%;
-    margin: 0 10px;
+    margin: 0 0 0 10px;
 }
 
 .panel {
     margin: 15px 0;
-    /*padding: 20px 20px 10px 20px;*/
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
     transition: all 0.3s ease-in-out;
+}
+
+.panel:first-of-type {
+    margin-top: 0;
 }
 
 .panel::after {
