Dispatch update to user and show snackbar on save

--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -284,8 +284,7 @@
     width: 49%;
 }
 
-.no-outline-form-input-field Input {
-    border: none;
+.read-only-input-field Input {
     color: black;
 }
 
