Add contact information panel

--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -275,6 +275,10 @@
     margin-bottom: 20px;
 }
 
+.form-input-field {
+    width: 100%;
+}
+
 .form-bi-input-container {
     display: flex;
     justify-content: space-between;
