Create skeleton of encounter panel

--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -115,9 +115,10 @@
     justify-content: flex-end;
 }
 
-/* Encounter */
-.encounter {
-    margin-bottom: 10px;
+/* Timeline */
+.encounter-panel-header {
+    display: flex;
+    justify-content: space-between;
 }
 
 /* Medication */
