--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -115,10 +115,58 @@
     justify-content: flex-end;
 }
 
+.profile-panel-header-title {
+    font-family: "Neue Hans Kendrick", sans-serif;
+    font-size: 20px;
+}
+
 /* Timeline */
+.encounter-panel {
+    max-width: 500px;
+}
+
 .encounter-panel-header {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.encounter-panel-title-container {
+    display: flex;
+    align-items: center;
+}
+
+.encounter-panel-title {
+    margin-right: 4px;
+}
+
+.verified-encounter-icon {
+    color: #00b894;
+}
+
+.encounter-significance-container {
+    display: flex;
+    align-items: center;
+}
+
+.significance-label {
+    margin-left: 4px;
+    font-size: 12px;
+    color: grey;
+}
+
+.encounter-panel-body-line-item {
+    display: flex;
+    align-items: center;
+}
+
+.encounter-panel-body-line-item-icon {
+    margin-right: 20px;
+}
+
+.encounter-panel-footer {
+    display: flex;
+    justify-content: flex-end;
 }
 
 /* Medication */
@@ -201,6 +249,7 @@
     border-radius: 10px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
     transition: all 0.3s ease-in-out;
+    padding: 20px 20px 10px 20px;
 }
 
 .panel:first-of-type {
@@ -230,17 +279,13 @@
     opacity: 1;
 }
 
-.profile-panel-header-title {
-    font-family: "Neue Hans Kendrick", sans-serif;
-    font-size: 20px;
-}
-
 .panel-body {
     margin-top: 20px;
 }
 
-.panel-header-and-body {
-    padding: 20px 20px 10px 20px;
+.panel-header-title {
+    font-family: "Neue Hans Kendrick", sans-serif;
+    font-size: 20px;
 }
 
 /* Utilities */
