--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -166,8 +166,10 @@
     align-items: center;
 }
 
-.encounter-panel-body-line-item-icon {
+.encounter-panel-body-line-item-icon-container {
     margin-right: 20px;
+    display: flex;
+    justify-content: center;
 }
 
 .encounter-panel-footer {
