--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -109,7 +109,7 @@
     max-width: 1000px;
 }
 
-/* Profile Tab */
+/* Profile */
 .profile-button-row {
     display: flex;
     justify-content: flex-end;
@@ -267,6 +267,12 @@
     padding: 20px 20px 10px 20px;
 }
 
+.no-hover-panel {
+    background-color: white;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    padding: 20px 20px 10px 20px;
+}
+
 .panel:first-of-type {
     margin-top: 0;
 }
@@ -298,7 +304,7 @@
     margin-top: 20px;
 }
 
-.panel-header-title {
+.title-panel-header-title {
     font-family: "Neue Hans Kendrick", sans-serif;
     font-size: 20px;
 }
@@ -342,3 +348,4 @@
     display: flex;
     justify-content: center;
 }
+
