--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -308,6 +308,12 @@
     font-size: 20px;
 }
 
+.panel-button-footer {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
 /* Utilities */
 /* Containers */
 .rounded-grey-container {
