Add medications panel ui

--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -111,8 +111,8 @@
 
 /* Summary */
 
-/* Diagnosis Panel */
-.diagnosis-popup-panel {
+/* Popup Panel */
+.popup-panel {
     min-width: 300px;
 }
 
