--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -65,12 +65,25 @@
     font-family: "Neue Hans Kendrick", sans-serif;
 }
 
+.home-content-container {
+    display: flex;
+    justify-content: center;
+}
+
+.home-content {
+    width: 95%;
+    max-width: 1000px;
+}
+
 /* Patient Header */
 .patient-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: white;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .patient-info {
@@ -104,9 +117,8 @@
 }
 
 .chart-content-container {
-    margin-top: 10px;
-    width: 95%;
-    max-width: 1000px;
+    margin-top: 20px;
+    width: 100%;
 }
 
 /* Summary */
@@ -125,10 +137,6 @@
 
 
 /* Timeline */
-.encounter-panel {
-    max-width: 500px;
-}
-
 .encounter-panel-header {
     display: flex;
     justify-content: space-between;
@@ -179,10 +187,6 @@
 /* Encounter Creator */
 .encounter-creator {
     margin: 60px 20px 20px 20px;
-}
-
-.significance-slider {
-    max-width: 300px;
 }
 
 .encounter-creator-close-button {
