Add encounter create form

--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -322,6 +322,11 @@
     justify-content: space-between;
 }
 
+/* FullForm */
+.full-form {
+    padding: 40px;
+}
+
 /* Utilities */
 /* Containers */
 .rounded-grey-container {
