--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -181,41 +181,6 @@
     margin-bottom: 10px;
 }
 
-/* Encounter Creator */
-.encounter-creator {
-    margin: 60px 20px 20px 20px;
-}
-
-.encounter-creator-close-button {
-    position: absolute;
-    right: 20px;
-    top: 15px;
-    width: 32px;
-    height: 32px;
-    opacity: 0.3;
-}
-
-.encounter-creator-close-button:hover {
-    opacity: 1;
-}
-
-.encounter-creator-close-button:before, .encounter-creator-close-button:after {
-    position: absolute;
-    left: 15px;
-    content: ' ';
-    height: 33px;
-    width: 2px;
-    background-color: #333;
-}
-
-.encounter-creator-close-button:before {
-    transform: rotate(45deg);
-}
-
-.encounter-creator-close-button:after {
-    transform: rotate(-45deg);
-}
-
 /* Shared Components */
 .full-page-spinner-container {
     position: fixed;
@@ -324,7 +289,23 @@
 
 /* FullForm */
 .full-form {
-    padding: 40px;
+    padding: 0;
+}
+
+.full-form-close-button {
+    margin-left: 12px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.full-form-content {
+    width: 95%;
+    max-width: 1000px;
+}
+
+.full-form-content-container {
+    display: flex;
+    justify-content: center;
 }
 
 /* Utilities */
@@ -367,3 +348,9 @@
     justify-content: center;
 }
 
+/* Headings */
+.main-heading {
+    text-align: center;
+    font-family: "Neue Hans Kendrick", sans-serif;
+    margin-bottom: 20px;
+}
