--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -84,6 +84,8 @@
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     padding: 10px;
+    width: 100%;
+    margin-bottom: 10px;
 }
 
 .patient-info {
@@ -353,4 +355,16 @@
     text-align: center;
     font-family: "Neue Hans Kendrick", sans-serif;
     margin-bottom: 20px;
+}
+
+.placeholder {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    padding: 20px 20px 10px 20px;
+    min-width: 400px;
+    min-height: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
