--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -189,6 +189,7 @@
 }
 
 /* Shared Components */
+/* FullPageSpinner */
 .full-page-spinner-container {
     position: fixed;
     top: 50%;
@@ -202,6 +203,7 @@
     min-height: 60px;
 }
 
+/* PanelGrid */
 .panel-grid {
     display: flex;
     justify-content: center;
@@ -217,6 +219,7 @@
     margin: 0 0 0 10px;
 }
 
+/* Panel */
 .panel {
     margin: 15px 0;
     background-color: white;
@@ -264,6 +267,7 @@
     margin-top: 15px;
 }
 
+/* PanelBodyLineItem */
 .panel-body-line-item {
     display: flex;
 }
@@ -362,6 +366,7 @@
     margin-bottom: 20px;
 }
 
+/* Placeholder */
 .placeholder {
     background-color: white;
     border-radius: 10px;
