--- a/cosmos_django/templates/cosmos_django/landing_page.html
+++ b/cosmos_django/templates/cosmos_django/landing_page.html
@@ -4,16 +4,21 @@
     {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Cosmos, Cosmos EHR, Electronic Health Record">
+    <meta name="description" content="Cosmos EHR is a fast, friendly, and fun electronic health record system for primary care physicians.">
+    <meta name="author" content="Darshan Kalola">
+
     <title>Cosmos</title>
+
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'frontend/images/favicon/favicon-16x16.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'frontend/images/favicon/favicon-32x32.png' %}">
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'frontend/images/favicon/apple-touch-icon.png' %}">
     <link rel="manifest" href="{% static 'frontend/images/favicon/site.webmanifest' %}">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'cosmos_django/landing_page.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 </head>
 <body>
 <div class="landing-page-content">
