--- a/cosmos_django/frontend/static/frontend/App.css
+++ b/cosmos_django/frontend/static/frontend/App.css
@@ -99,10 +99,6 @@
     margin-bottom: 10px;
 }
 
-.patient-header-result:hover {
-    background-color: #f1f1f1;
-}
-
 .patient-info {
     display: flex;
     align-items: center;
@@ -196,6 +192,29 @@
 /* Vaccination */
 .vaccination {
     margin-bottom: 10px;
+}
+
+/* Search */
+/* SearchResultItem */
+.search-result-item {
+    -moz-transition: all .1s ease-in;
+    -o-transition: all .1s ease-in;
+    -webkit-transition: all .1s ease-in;
+    transition: all .1s ease-in;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    padding: 10px;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.search-result-item:hover {
+    cursor: pointer;
+    background-color: lightgrey;
 }
 
 /* Shared Components */
